# qrenderorang

./: .gitmodules  CMakeLists.txt  QRenderOrang.pro  README  README.md  TODO
.github/workflows/: c-cpp.yml
ext/: DEPS.txt
ext/tinyobj/: tiny_obj_loader.h
include/: Common.h  MainWidget.h  Mesh.h  PreviewWidget.h  ShaderEditor.h  SyntaxHighlighter.h  Texture.h  Uniform.h  UniformWidget.h
models/: README.md
samples/: disney.qrfx  ibl.qrfx  model-pbr.qrfx  phong.qrfx  reflections.qrfx  simple-pbr.qrfx
src/: MainWidget.cpp  MainWidget.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PreviewWidget.cpp  PreviewWidget.h  Shader.cpp  Shader.h  ShaderEditor.cpp  SyntaxHighlighter.cpp  Texture.cpp  Uniform.cpp  UniformWidget.cpp  main.cpp  qrenderorang.qrc  qrenderorang.ui
textures/: COPYING.txt  Road_to_MonumentValley_irr.hdr  Road_to_MonumentValley_irradiance.dds  Road_to_MonumentValley_radiance.dds  Road_to_MonumentValley_radiance.hdr  bamboo-wood-semigloss-albedo.dds  bamboo-wood-semigloss-normal.dds  bamboo-wood-semigloss-r-ao-m.dds  helmet-albedo.dds  helmet-emissive.dds  helmet-normal.dds  helmet-r-ao-m.dds
ui/: qrenderorang.qrc  qrenderorang.ui  uniform.ui
